--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
-#movies img, #movie img{
-  width:100%;
+#movies img {
+  width: 70%;
+  max-width: 250px;
+}
+
+#movie img {
+  width: 100%;
 }
 
 @media(min-width:960px){
@@ -22,4 +27,16 @@ h2 {
 
 .navbar-brand {
   font-size: 33px;
+  padding-right: 840px;
+  /*padding-bottom: 20px;*/
+  /*width: 200px;*/
+}
+.navbar-header {
+  /*height: 40px;
+  margin-bottom: 10px;*/
+  /*width: 200px;*/
+}
+
+.well {
+  text-align: center;
 }
