--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@
 }
 
 .jumbotron {
-  background-color: #d60724;
+  /*background-color: #d60724;*/
+  background: linear-gradient(#821524, red, #d60724);
 }
 
 .button {
@@ -33,14 +34,7 @@ h2 {
 
 .navbar-brand {
   font-size: 33px;
-  padding-right: 840px;
-  /*padding-bottom: 20px;*/
-  /*width: 200px;*/
-}
-.navbar-header {
-  /*height: 40px;
-  margin-bottom: 10px;*/
-  /*width: 200px;*/
+  /*margin-top: -10px;*/
 }
 
 .well {
