minor cosmetic changes

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ h3 {
 
 .navbar-brand {
   font-size: 33px;
-  background: linear-gradient(#b9b9b9, #5d5757, #1b1a1a);
+  background: linear-gradient(#868282, #5d5757, #1b1a1a);
   margin-left: 15px;
   /*border-radius: 5px 5px 0px 0px;*/
 }
