--- a/css/style.css
+++ b/css/style.css
@@ -28,27 +28,76 @@
   margin-top: 15px;
   border-radius: 5px;
   background-color: #dedfe0;
+  border: 1px solid grey;
+}
+
+.btn-primary {
+    background: linear-gradient(#821524, red, #d60724);
+    /* box-shadow: 2px 2px 3px #b3b3b3; */
+    border: 2px solid #7c1d1d96;
 }
 
 h2 {
   color: #f9f9f9;
+  margin-top: 0px;
 }
 
 h3 {
   text-decoration: underline;
 }
 
+h5 {
+  color: white;
+}
+
+html {
+  background-color: #282b30;
+}
+
+body {
+  background-color: #282b30;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.italic {
+  font-style: italic;
+  color: #d8d7d7;
+}
+
+.container {
+  background-color: #282b30;
+}
+
+.well {
+  background-color: #807d7d;
+  border: 1px solid #d8d7d7;
+}
+
+.well2 {
+  background-color: #282b30;
+  color: white;
+}
+
+.list-group-item {
+  background-color: #c1bfbf;
+}
+
 .navbar {
   margin-bottom: 10px;
+  padding: 0;
+  background-color: #282b30;
+  border: 1px #282b30;
 }
 
 .navbar-brand {
   font-size: 33px;
-  background: linear-gradient(#868282, #5d5757, #1b1a1a);
+  /* background: linear-gradient(#868282, #5d5757, #1b1a1a); */
   margin-left: 15px;
+  color: white;
   /*border-radius: 5px 5px 0px 0px;*/
 }
 
 .plot-left {
   text-align: left;
+  padding-left: 0px;
 }
